--- a/index.html
+++ b/index.html
@@ -1,81 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
-  <a href="https://www.facebook.com/daraeulalia.titoolivares">Facebook</a>
-  <a href="https://www.tiktok.com/@daraeulaliatitool">Tiktok</a>
-  <a href="https://www.instagram.com/daraeulaliatitoolivares/">Instagram</a>
 <head>
   <meta charset="UTF-8">
-  <title>Portada de Dara Eulalia Tito Olivares</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi Sitio Personal</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 40px;
-      background-color: #f1e5ef;
-    }
-
-    .container {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    h1 {
-      font-size: 2.5em;
-      color: #de0eb1;
-      margin-bottom: 10px;
-    }
-
-    .profile-pic {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid #9804e7;
-    }
-
-    .section {
-      margin-top: 20px;
-    }
-
-    .subtitle {
-      color: #6a1b9a;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    p {
-      margin: 0 0 10px 0;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; }
+    nav { background: #333; padding: 1em; text-align: center; }
+    nav a { color: white; margin: 0 1em; text-decoration: none; font-weight: bold; }
+    section { padding: 2em; display: none; }
+    section.active { display: block; }
+    .cv { display: flex; align-items: flex-start; }
+    .cv img { max-width: 200px; margin-right: 2em; border-radius: 10px; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1em; }
+    .box { background: white; padding: 1em; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    .circle-list span { display: inline-block; background: #ddd; border-radius: 50%; width: 40px; height: 40px; text-align: center; line-height: 40px; margin: 5px; font-weight: bold; }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <div>
-      <h1>Dara Eulalia Tito Olivares</h1>
+  <nav>
+    <a href="#" onclick="showSection('cv')">CV</a>
+    <a href="#" onclick="showSection('descripcion')">Contacto</a>
+    <a href="#" onclick="showSection('sobremi')">Sobre Mí</a>
+    <a href="#" onclick="showSection('proyectos')">Proyectos</a>
+    <a href="#" onclick="showSection('contactos')">Contactos</a>
+  </nav>
+
+  <section id="cv" class="active">
+    <div class="cv">
+      <img src="assets/BeautyPlus_20200911101505160_save.jpg" alt="Mi Foto">
+      <div>
+        <h2>Mi Currículum</h2>
+        <p>Estudiante de arquitectura de plataformas y servicios de TIC con sólida formación en diseño, desarrollo e implementación de sistemas tecnológicos robustos y escalables, dominio de metodologías ágiles y capacidad para trabajar en equipo, adaptándose a entornos dinámicos y desafiantes.  Buscando oportunidades para aplicar mis conocimientos y contribuir al crecimiento de una organización tecnológica..</p>
+      </div>
     </div>
-    <img class="profile-pic" src="assets/BeautyPlus_20200911101505160_save.jpg" alt="Foto de perfil">
-    <!-- Puedes reemplazar la URL por tu foto -->
-  </div>
+  </section>
 
-  <div class="section">
-    <div class="subtitle">Descripción:</div>
-    <p>Soy una chica de tez canela, cabello negro, ojos marrones oscuros, cara ovalada, labios delgados, de estatura media alta,que le gusta cuidar y consertir a sus mascotas , escuchar musica haciendo mis deberes y mantener mis cosas limpias siempre y cuando se ensucien , me gustan los perfumes y los lazos que van con mi cabello. </p>
-  </div>
+  <section id="descripcion">
+    <h2>Contacto</h2>
+    <p>Puedes contactarme a través de los siguientes medios.
+      -Numero: 948757470
+      -Correo: DaraEulalia31@gmail.com
+    </p>
+  </section>
 
-  <div class="section">
-    <div class="subtitle">Hobbies:</div>
-    <p>Ver películas, animes, escuchar música y bordar.</p>
-  </div>
+  <section id="sobremi">
+    <h2>Sobre Mi</h2>
+    <div class="grid">
+      <div class="box">En computación, aprendo en la resolución de problemas y el pensamiento algorítmico,  traduciendo desafíos complejos en soluciones lógicas y eficientes</div>
+      <div class="box">Mi habilidad como repostera es la precisión en la medición y el seguimiento de recetas.  La repostería requiere exactitud en las cantidades de ingredientes y un seguimiento cuidadoso de los procesos para lograr la textura y el sabor deseados</div>
+      <div class="box">Mis habilidades culinarias demuestran mi adaptabilidad, creatividad e improvisación, permitiéndome crear y modificar recetas según las circunstancias.</div>
+    </div>
+  </section>
 
-  <div class="section">
-    <div class="subtitle">Pasatiempos:</div>
-    <p>Dormir, pintar, jugar,leer, ver tiktoks</p>
-  </div>
+  <section id="proyectos">
+    <h2>Proyectos</h2>
+    <div class="grid">
+      <div class="box">https://github.com/daraeulalia31/clasecss</div>
+      <div class="box">https://github.com/daraeulalia31/Dulces-Sue-os</div>
+      <div class="box">https://github.com/daraeulalia31/Mi_primer_app</div>
+    </div>
+  </section>
 
-  <div class="section">
-    <div class="subtitle">Actividades favoritas:</div>
-    <p>Hacer caminata y cantar.</p>
-  </div>
+  <section id="contactos">
+    <h2>Información de Contacto</h2>
+    <div class="grid">
+      <div class="box">Nombre: Dara Eulalia Tito Olivares</div>
+      <div class="box">Celular: +51 948757470</div>
+      <div class="box">Whatssap: 948757470</div>
+      <div class="box">TikTok: @daraeulaliatitool</div>
+      <div class="box">Instagram: daraeulaliatitoolivares</div>
+      <ul>
+  <div style="display: flex; gap: 20px; justify-content: center; align-items: center; flex-wrap: wrap;">
+  <a href="https://github.com/daraeulalia31" target="_blank">
+    <img src="assets/service_512.png" alt="" style="width: 100px; height: auto;">
+  </a>
+  <a href="https://www.tiktok.com/@daraeulaliatitool" target="_blank">
+    <img src="assets/TikTok-logo.jpg" alt="" style="width: 100px; height: auto;">
+  </a>
+  <a href="https://www.facebook.com/daraeulalia.titoolivares" target="_blank">
+    <img src="assets/images.png" alt="" style="width: 100px; height: auto;">
+  </a>
+</div>
+</a>
+</ul>
+    </div>
+   
 
+  <script>
+    function showSection(id) {
+      document.querySelectorAll('section').forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+    }
+  </script>
 </body>
+</html>
