--- a/index.html
+++ b/index.html
@@ -132,28 +132,28 @@
   <section id="sobremi" class="seccion">
     <h2>Sobre mí</h2>
     <p>
-      Soy un/a apasionado/a de la informática con experiencia en desarrollo web, diseño de interfaces y soluciones eficientes. Me gusta mantenerme actualizado/a y siempre buscar formas nuevas de innovar con tecnología.
+      Soy una señorita con conocimientos de la informática con experiencia en desarrollo web, diseño de interfaces y soluciones eficientes. Me gusta mantenerme actualizada y siempre buscar formas nuevas de innovar con tecnología.
     </p>
   </section>
 
   <section id="proyectos" class="seccion">
     <h2>Proyectos</h2>
     <div class="proyecto">
-      <h3>Proyecto 1</h3>
-      <p>Descripción del proyecto, tecnologías usadas, y tu participación.</p>
+      <h3>Mi App</h3>
+      <p>Creacion de una app de reposteria para una empresa.</p>
     </div>
     <div class="proyecto">
-      <h3>Proyecto 2</h3>
-      <p>Otro proyecto que muestre tus habilidades técnicas.</p>
+      <h3>Dulces Sueños</h3>
+      <p>Producto creado por mi para una pasteleria muy importante.</p>
     </div>
   </section>
 
   <section id="contacto" class="seccion">
     <h2>Contacto</h2>
     <ul>
-      <li>Email: <strong>tucorreo@example.com</strong></li>
-      <li>LinkedIn: <a href="#">linkedin.com/in/tuusuario</a></li>
-      <li>GitHub: <a href="#">github.com/tuusuario</a></li>
+      <li>Email: <strong>DaraEulalia31@gmail.com</strong></li>
+      <li>Facebook: <a href="https://www.facebook.com/">Dara Eulalia</a></li>
+      <li>GitHub: <a href="https://github.com/daraeulalia31">Dara Eulalia</a></li>
     </ul>
   </section>
 
